Writing through lead item myself

--- a/2025/2025-05-25-wir.md
+++ b/2025/2025-05-25-wir.md
@@ -1,4 +1,4 @@
-# AI is in a hype cycle. Let's act like it.
+# tktk
 ## tktk
 
 ![A pair of dice being rolled](https://images.unsplash.com/photo-1605870445919-838d190e8e1b?q=80&w=3272&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
@@ -14,20 +14,46 @@
 
 <hr>
 
-**Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
+**Dr. Clayton Dalton explored a topic dear to my heart** in [a post](https://www.salon.com/2025/05/20/dont-fight-uncertainty--embrace-it/) for Salon on Tuesday. He writes:
 
-- ER doc's post in Salon about embracing more uncertainty and probabilistic thinking, including regarding AI: https://www.salon.com/2025/05/20/dont-fight-uncertainty--embrace-it/
+>*It's hard to know what's real, it turns out.*
+>
+>*Sometimes things are obvious. When it’s raining, there’s no doubt about whether it’s raining or not. A flat tire, in all likelihood, really is a flat tire. But much of the world is not directly verifiable in this way. Are there really millions of dead people collecting Social Security? Does China secretly control the Panama Canal? Was that video on TikTok actually Tom Cruise? How do you know for sure?*
+>
+>*The rapid ascent of generative AI is only making things worse. Within the past few years, it’s been used to create political deepfakes from Moldova to South Africa to the United States. An AI-generated Imran Khan, Pakistan’s ex-prime minister, gave a speech while the real Khan was in jail. AI-generated evidence is now being introduced in divorce court, and last year AI was used to impersonate a company’s CFO and steal $25 million. According to one survey, deepfake incidents rose in 2024 by 300% in the United States, 1,625% in South Korea, 2,800% in China, and 3,000% in Bulgaria.*
 
-- WSJ coverage of the new Ive/OpenAI partnership: https://www.wsj.com/tech/ai/what-sam-altman-told-openai-about-the-secret-device-hes-making-with-jony-ive-f1384005?st=ZAip6R&reflink=desktopwebshare_permalink
+For Dr. Dalton, an emergency room specialist, the solution to increasing AI-driven uncertainty isn't always to "solve" and replace it with certainty. He says it's often better to embrace the uncertainty, then use [Bayesian inference](https://en.wikipedia.org/wiki/Bayesian_inference), a probability framework, to sort through a range of scenarios that *might* be true.
 
-- Jonny Ive joined OpenAI: https://decrypt.co/321363/apple-design-legend-jony-ive-joins-openai
+That strikes me as a highly useful prism through which to consider the latest blockbuster story about the AI industry itself: On Wednesday, [OpenAI acquired](https://decrypt.co/321363/apple-design-legend-jony-ive-joins-openai) legendary designer Jony Ive's startup io for $6.5 billion.
 
- <hr>
+Cue the Silicon Valley hype machine, [vaporware](https://www.urbandictionary.com/define.php?term=Vaporware), and borderline messaianic claims. The Wall Street Journal's Berber Jin [reports](https://www.wsj.com/tech/ai/what-sam-altman-told-openai-about-the-secret-device-hes-making-with-jony-ive-f1384005?st=jDCzRY&reflink=desktopwebshare_permalink) that Ive and OpenAI CEO Sam Altman have secretly been working on a groundbreaking AI "companion" device that they plan to release by late next year.
 
- [![affiliate banner ad](https://w3w.news/img/affiliate-kz-letter.png)](
- https://dribbble.com/roobinium)
+According to the Journal, OpenAI is planning to quickly ship 100 million of the new gadget, with the goal of making it a "third device" for users alongside the daily staples of a laptop and smartphone.   
 
- <hr>
+<hr>
+
+[![affiliate banner ad](https://w3w.news/img/affiliate-kz-letter.png)](
+https://dribbble.com/roobinium)
+
+<hr>
+
+So what are the chances that this new device will actually be such a megahit, and prove so indespensible to everyday users' daily routines, so quickly? How likely is it to be a "game changer," to borrow a common shorthand?
+
+Let's do some back-of-the-envelope calculations, based on Ive's track record designing four Apple product lines that undeniably had their share of game-changing moments from the late 1990s through Ive's departure in 2019: the iMac, iPod, iPhone, and iPad.
+
+Let's assume that each of these lines had three truly game-changing product releases over that stretch, generation by generation of each device. Admittedly, the definition of what's "game-changing" is highly subjective. But I'm purposefully trying to give benefit of the doubt here, crediting Ive with a dozen truly groundbreaking, industry-changing products in his heyday.
+
+That about averages out to one every 18 months over Ive's 20-plus year tenure at Apple -- an insanely prolific frequency of true "game changers" for any tech executive.
+
+At the same time, let's acknowledge that not *every* iRelease under Ive was a groundbreaker. There were some more modestly iterative products and, yes, some outright missteps. Remember the iPhone 4's [antenna issues](https://www.slashgear.com/842545/why-antennagate-was-a-complete-disaster-for-apple/)? Or that time Apple's obsession with making its devices thinner and lighter led to an iPhone 6 that was a bit [too bendy](https://qz.com/1288272/bendgate-was-real-apple-knew-the-iphone-6-was-very-bendy)?
+
+(Thankfully, there was never actually an Apple Spatula. But the [spoof product video](https://www.youtube.com/watch?v=3WTE4QKDojg) is hilarious nevertheless.)
+
+According to the community-maintained [Apple Wiki](https://apple.fandom.com/wiki/), there were nine iMac generations, 26 generations of different iPod devices, 11 iPhone generations, and seven iPad generations through 2019, when Ive left Apple.
+
+That comes out to a total 53 Ive-designed generations of iDevices. Divide that figure by our earlier estimate of his real game-changers, and you have a 23% rate of breakthroughs.
+
+That also means a 77% rate of non-breakthroughs, of course. And I would offer that as a very approximate probability that the OpenAI device won't be one either.
 
 ### Five Things: May 18-24, 2025
 
@@ -35,13 +61,14 @@
 
 - **Bitcoin set a new all-time high** near $112,000 per token [on Thursday](https://uk.finance.yahoo.com/news/bitcoin-price-all-time-high-crypto-093320602.html). Prices have since retreated slightly, but there is no denying crypto remains in a renewed bull run for now, led by BTC. The original cryptocurrency has benefited recently from heavy institutional buying and increased investor appetite for havens aside from the dollar and [U.S. Treasury bonds](https://www.wsj.com/finance/investing/global-stocks-markets-dow-news-05-21-2025-f2e9c9cc?st=Frj82n&reflink=desktopwebshare_permalink)... Coincidentally, Thursday's new record price fell on Bitcoin Pizza Day, the anniversary of one of the earliest bitcoin transactions, in 2010. At the time, developer Laszlo Hanyecz [paid 10,000 BTC](https://www.forbes.com/sites/colinharper/2025/05/22/the-man-behind-bitcoin-pizza-day-spent-more-bitcoin-than-you-think/) for two pizzas from Papa John's. Those tokens would now be worth over $1 billion.
 
+- **President Trump hosted a controversial dinner** for the largest holders of his TRUMP memecoin at his golf club in Northern Virginia. The event has raised ethics questions around Washington, with the top 220 token holders collectively spending over $140 million to secure spots at the dinner. ([Axios](https://www.axios.com/2025/05/22/trump-meme-coin-dinner))
+
+- **Hong Kong passed a stablecoin law** for issuers of fiat-pegged tokens, including requirements for licensing, reserve management, redemptions, and anti-money laundering controls. ([Decrypt](https://decrypt.co/321516/hong-kong-passes-law-to-regulate-fiat-pegged-stablecoins))
+
 - **Coinbase replaced Discover in the S&P 500.** The update marks [the first time](https://www.latimes.com/business/story/2025-05-19/coinbase-becomes-first-crypto-company-to-join-the-s-p-500-after-rocky-week) a crypto platform has been included in the U.S. stock market's benchmark index... Separately, Coinbase [turned the tables](https://www.msn.com/en-us/money/technology/coinbase-puts-20-million-bounty-on-crooks-who-tried-to-extort-firm-over-stolen-customer-data/ar-AA1EORsm?ocid=TobArticle) on hackers demanding $20 million for the return of stolen user data. Instead, the exchange is offering the same sum for information leading to arrest and conviction of the hackers.
 
-- US President Trump hosted an exclusive dinner for the largest holders of his meme coin, Official Trump, at his golf club in Virginia, sparking ethics concerns. The event has raised questions about the intersection of politics and cryptocurrency, with the top 220 holders reportedly spending over $140 million to secure a spot at the dinner. https://www.axios.com/2025/05/22/trump-meme-coin-dinner | A recent gala hosted by President Donald Trump for top buyers of his $TRUMP meme coin has raised concerns among lawmakers and regulators, threatening to derail stablecoin legislation. The event, which saw a 16% drop in the coin's value the next morning, has sparked protests and calls for a ban on presidents profiting from crypto ventures while in office, putting a bipartisan bill at risk of stalling. https://www.cnbc.com/2025/05/23/trump-meme-coin-dinner.html <!-- Draft summaries by Leo/Llama 3.1 8B-->
+- **Solana Mobile plans to launch** a new token alongside its new crypto-oriented smartphone, due out Aug. 4. ([Decrypt](https://decrypt.co/321360/why-solana-mobile-drop-token-seeker-phone))
 
-- Solana Mobile has unveiled plans to launch its own token, SKR, and introduce its decentralized architecture, TEEPIN, which will support its expansion to more hardware makers and decentralize its web3 ecosystem. The company also confirmed a shipping date of August 4 for its second crypto smartphone, "Seeker," which has already seen over 150,000 units presold across 57 countries. https://www.theblock.co/post/355238/solana-mobile-skr-token-seeker-shipping-date | Solana Mobile is set to launch a new token, SKR, to fuel its decentralized mobile ecosystem, which will be rooted in the layer-1 blockchain. The token will be used to coordinate growth and change within the ecosystem, and will be earned by builders and users for participation, with the goal of creating a decentralized mobile platform that is open to additional hardware manufacturers. https://decrypt.co/321360/why-solana-mobile-drop-token-seeker-phone <!-- Draft summaries by Leo/Llama 3.1 8B-->
-
-- Hong Kong has passed a law requiring stablecoin issuers to obtain a license from the Hong Kong Monetary Authority, aiming to balance innovation and investor protection in the city's growing digital asset market. The new law introduces a licensing regime for stablecoin issuers, covering reserve asset management, redemption, and anti-money laundering controls, and is expected to come into effect later this year. https://decrypt.co/321516/hong-kong-passes-law-to-regulate-fiat-pegged-stablecoins <!-- Draft summaries by Leo/Llama 3.1 8B-->
 
 ### Market Snapshot
 
