--- a/2025/2025-05-25-wir.md
+++ b/2025/2025-05-25-wir.md
@@ -1,8 +1,8 @@
-# tktk
-## tktk
+# Vetting OpenAI's bet on a $6.5 billion man
+## Crunching the numbers on the AI giant's new deal with legendary iPhone designer Jony Ive
 
-![A pair of dice being rolled](https://images.unsplash.com/photo-1605870445919-838d190e8e1b?q=80&w=3272&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
-*Photo by Edge2Edge Media on Unsplash*
+![A pair of dice being rolled](https://cdn.openai.com/sam-and-jony/portrait.jpg?w=3840&q=90&fm=webp)
+*Jony Ive, founder of io, and OpenAI CEO Sam Altman. Photo courtesy of OpenAI*
 
 <hr>
 
@@ -26,7 +26,7 @@ For Dr. Dalton, an emergency room specialist, the solution to increasing AI-driv
 
 That strikes me as a highly useful prism through which to consider the latest blockbuster story about the AI industry itself: On Wednesday, [OpenAI acquired](https://decrypt.co/321363/apple-design-legend-jony-ive-joins-openai) legendary designer Jony Ive's startup io for $6.5 billion.
 
-Cue the Silicon Valley hype machine, [vaporware](https://www.urbandictionary.com/define.php?term=Vaporware), and borderline messaianic claims. The Wall Street Journal's Berber Jin [reports](https://www.wsj.com/tech/ai/what-sam-altman-told-openai-about-the-secret-device-hes-making-with-jony-ive-f1384005?st=jDCzRY&reflink=desktopwebshare_permalink) that Ive and OpenAI CEO Sam Altman have secretly been working on a groundbreaking AI "companion" device that they plan to release by late next year.
+Cue the Silicon Valley hype machine, [vaporware](https://www.urbandictionary.com/define.php?term=Vaporware), and borderline [messaianic claims](https://openai.com/sam-and-jony/). The Wall Street Journal's Berber Jin [reports](https://www.wsj.com/tech/ai/what-sam-altman-told-openai-about-the-secret-device-hes-making-with-jony-ive-f1384005?st=jDCzRY&reflink=desktopwebshare_permalink) that Ive and OpenAI CEO Sam Altman have secretly been working on a potentially groundbreaking AI "companion" device that they plan to release by late next year.
 
 According to the Journal, OpenAI is planning to quickly ship 100 million of the new gadget, with the goal of making it a "third device" for users alongside the daily staples of a laptop and smartphone.   
 
