Copyedits + final heds based on drafts by Copilot, ChatGPT

--- a/2025/2025-05-25-wir.md
+++ b/2025/2025-05-25-wir.md
@@ -1,5 +1,5 @@
-# Vetting OpenAI's bet on a $6.5 billion man
-## Crunching the numbers on the AI giant's new deal with legendary iPhone designer Jony Ive
+# OpenAI bets on a $6.5 billion man
+## But will it work? The startup's deal with ex-Apple design chief Jony Ive faces longer odds than you might think.
 
 ![A pair of dice being rolled](https://cdn.openai.com/sam-and-jony/portrait.jpg?w=3840&q=90&fm=webp)
 *Jony Ive, founder of io, and OpenAI CEO Sam Altman. Photo courtesy of OpenAI*
@@ -37,21 +37,23 @@ https://dribbble.com/roobinium)
 
 <hr>
 
-So what are the chances that this new device will actually be such a megahit, and prove so indespensible to everyday users' daily routines, so quickly? How likely is it to be a "game changer," to borrow a common shorthand?
+So what are the chances that this new device will actually be such a megahit, and prove so indespensible to everyday users' daily routines, on such an accelerated timetable? How likely is it to be a "game changer," to borrow a common shorthand?
 
 Let's do some back-of-the-envelope calculations, based on Ive's track record designing four Apple product lines that undeniably had their share of game-changing moments from the late 1990s through Ive's departure in 2019: the iMac, iPod, iPhone, and iPad.
 
-Let's assume that each of these lines had three truly game-changing product releases over that stretch, generation by generation of each device. Admittedly, the definition of what's "game-changing" is highly subjective. But I'm purposefully trying to give benefit of the doubt here, crediting Ive with a dozen truly groundbreaking, industry-changing products in his heyday.
+Let's assume that each of these lines had three truly game-changing product releases over that stretch, generation by generation of each device. So that comes out to 12 total.
 
-That about averages out to one every 18 months over Ive's 20-plus year tenure at Apple -- an insanely prolific frequency of true "game changers" for any tech executive.
+Admittedly, the definition of what's "game-changing" is highly subjective. But I'm purposefully trying to give benefit of the doubt here, crediting Ive with a dozen truly groundbreaking, industry-changing products in his heyday at Apple.
+
+That about averages out to one every 18 months over Ive's 20-plus year tenure there -- an insanely prolific frequency of true "game changers" for any tech executive.
 
 At the same time, let's acknowledge that not *every* iRelease under Ive was a groundbreaker. There were some more modestly iterative products and, yes, some outright missteps. Remember the iPhone 4's [antenna issues](https://www.slashgear.com/842545/why-antennagate-was-a-complete-disaster-for-apple/)? Or that time Apple's obsession with making its devices thinner and lighter led to an iPhone 6 that was a bit [too bendy](https://qz.com/1288272/bendgate-was-real-apple-knew-the-iphone-6-was-very-bendy)?
 
-(Thankfully, there was never actually an Apple Spatula. But the [spoof product video](https://www.youtube.com/watch?v=3WTE4QKDojg) is hilarious nevertheless.)
+(Thankfully, there was never actually an Apple Spatula. But the [spoof product video](https://www.youtube.com/watch?v=3WTE4QKDojg) for that one is hilarious nevertheless.)
 
 According to the community-maintained [Apple Wiki](https://apple.fandom.com/wiki/), there were nine iMac generations, 26 generations of different iPod devices, 11 iPhone generations, and seven iPad generations through 2019, when Ive left Apple.
 
-That comes out to a total 53 Ive-designed generations of iDevices. Divide that figure by our earlier estimate of his real game-changers, and you have a 23% rate of breakthroughs.
+That comes out to a total 53 Ive-designed generations of iDevices. Divide that figure by our earlier estimate of 12 real game-changers for him, and you have a 23% rate of breakthroughs.
 
 That also means a 77% rate of non-breakthroughs, of course. And I would offer that as a very approximate probability that the OpenAI device won't be one either.
 
