Copyedits based on suggested fixes from Copilot

--- a/2025/2025-05-25-wir.md
+++ b/2025/2025-05-25-wir.md
@@ -1,5 +1,5 @@
 # OpenAI bets on a $6.5 billion man
-## But will it work? The startup's deal with ex-Apple design chief Jony Ive faces longer odds than you might think.
+## Will it work? The startup's deal with ex-Apple design chief Jony Ive faces longer odds than you might think.
 
 ![A pair of dice being rolled](https://cdn.openai.com/sam-and-jony/portrait.jpg?w=3840&q=90&fm=webp)
 *Jony Ive, founder of io, and OpenAI CEO Sam Altman. Photo courtesy of OpenAI*
@@ -26,7 +26,7 @@ For Dr. Dalton, an emergency room specialist, the solution to increasing AI-driv
 
 That strikes me as a highly useful prism through which to consider the latest blockbuster story about the AI industry itself: On Wednesday, [OpenAI acquired](https://decrypt.co/321363/apple-design-legend-jony-ive-joins-openai) legendary designer Jony Ive's startup io for $6.5 billion.
 
-Cue the Silicon Valley hype machine, [vaporware](https://www.urbandictionary.com/define.php?term=Vaporware), and borderline [messaianic claims](https://openai.com/sam-and-jony/). The Wall Street Journal's Berber Jin [reports](https://www.wsj.com/tech/ai/what-sam-altman-told-openai-about-the-secret-device-hes-making-with-jony-ive-f1384005?st=jDCzRY&reflink=desktopwebshare_permalink) that Ive and OpenAI CEO Sam Altman have secretly been working on a potentially groundbreaking AI "companion" device that they plan to release by late next year.
+Cue the Silicon Valley hype machine, [vaporware](https://www.urbandictionary.com/define.php?term=Vaporware), and borderline [messianic claims](https://openai.com/sam-and-jony/). The Wall Street Journal's Berber Jin [reports](https://www.wsj.com/tech/ai/what-sam-altman-told-openai-about-the-secret-device-hes-making-with-jony-ive-f1384005?st=jDCzRY&reflink=desktopwebshare_permalink) that Ive and OpenAI CEO Sam Altman have secretly been working on a potentially groundbreaking AI "companion" device that they plan to release by late next year.
 
 According to the Journal, OpenAI is planning to quickly ship 100 million of the new gadget, with the goal of making it a "third device" for users alongside the daily staples of a laptop and smartphone.   
 
@@ -37,25 +37,23 @@ https://dribbble.com/roobinium)
 
 <hr>
 
-So what are the chances that this new device will actually be such a megahit, and prove so indespensible to everyday users' daily routines, on such an accelerated timetable? How likely is it to be a "game changer," to borrow a common shorthand?
+So what are the chances that this new device will actually be such a megahit, and prove so indispensable to everyday users' daily routines, on such an accelerated timetable? How likely is it to be a "game changer," to borrow a common shorthand?
 
 Let's do some back-of-the-envelope calculations, based on Ive's track record designing four Apple product lines that undeniably had their share of game-changing moments from the late 1990s through Ive's departure in 2019: the iMac, iPod, iPhone, and iPad.
 
 Let's assume that each of these lines had three truly game-changing product releases over that stretch, generation by generation of each device. So that comes out to 12 total.
 
-Admittedly, the definition of what's "game-changing" is highly subjective. But I'm purposefully trying to give benefit of the doubt here, crediting Ive with a dozen truly groundbreaking, industry-changing products in his heyday at Apple.
+Admittedly, the definition of what's "game-changing" is highly subjective. But I'm purposefully trying to give benefit of the doubt here, crediting Ive with a dozen truly groundbreaking, industry-changing products in his heyday at Apple. That averages out to about one every 18 months for Ive in the iDevice era — an insanely prolific frequency of true "game changers" for any tech executive.
 
-That about averages out to one every 18 months over Ive's 20-plus year tenure there -- an insanely prolific frequency of true "game changers" for any tech executive.
+At the same time, let's acknowledge that not *every* iRelease under Ive was a groundbreaker. There were also some more modestly iterative products and, yes, some outright missteps. Remember the iPhone 4's [antenna issues](https://www.slashgear.com/842545/why-antennagate-was-a-complete-disaster-for-apple/)? Or that time Apple's obsession with making its devices thinner and lighter led to an iPhone 6 that was a bit [too bendy](https://qz.com/1288272/bendgate-was-real-apple-knew-the-iphone-6-was-very-bendy)?
 
-At the same time, let's acknowledge that not *every* iRelease under Ive was a groundbreaker. There were some more modestly iterative products and, yes, some outright missteps. Remember the iPhone 4's [antenna issues](https://www.slashgear.com/842545/why-antennagate-was-a-complete-disaster-for-apple/)? Or that time Apple's obsession with making its devices thinner and lighter led to an iPhone 6 that was a bit [too bendy](https://qz.com/1288272/bendgate-was-real-apple-knew-the-iphone-6-was-very-bendy)?
-
-(Thankfully, there was never actually an Apple Spatula. But the [spoof product video](https://www.youtube.com/watch?v=3WTE4QKDojg) for that one is hilarious nevertheless.)
+(Thankfully, there was never actually an Apple Spatula. But the [spoof product video](https://www.youtube.com/watch?v=3WTE4QKDojg) for that one is still hilarious.)
 
 According to the community-maintained [Apple Wiki](https://apple.fandom.com/wiki/), there were nine iMac generations, 26 generations of different iPod devices, 11 iPhone generations, and seven iPad generations through 2019, when Ive left Apple.
 
-That comes out to a total 53 Ive-designed generations of iDevices. Divide that figure by our earlier estimate of 12 real game-changers for him, and you have a 23% rate of breakthroughs.
+That comes out to a total 53 Ive-designed generations of iDevices. Divide that figure by our earlier estimate of 12 real game changers for him, and you have a 23% rate of breakthroughs.
 
-That also means a 77% rate of non-breakthroughs, of course. And I would offer that as a very approximate probability that the OpenAI device won't be one either.
+That also means there is a 77% rate of non-breakthroughs, of course. I would offer that as a very rough estimate of the probability that the OpenAI device won’t be one either.”
 
 ### Five Things: May 18-24, 2025
 
@@ -67,7 +65,7 @@ That also means a 77% rate of non-breakthroughs, of course. And I would offer th
 
 - **Hong Kong passed a stablecoin law** for issuers of fiat-pegged tokens, including requirements for licensing, reserve management, redemptions, and anti-money laundering controls. ([Decrypt](https://decrypt.co/321516/hong-kong-passes-law-to-regulate-fiat-pegged-stablecoins))
 
-- **Coinbase replaced Discover in the S&P 500.** The update marks [the first time](https://www.latimes.com/business/story/2025-05-19/coinbase-becomes-first-crypto-company-to-join-the-s-p-500-after-rocky-week) a crypto platform has been included in the U.S. stock market's benchmark index... Separately, Coinbase [turned the tables](https://www.msn.com/en-us/money/technology/coinbase-puts-20-million-bounty-on-crooks-who-tried-to-extort-firm-over-stolen-customer-data/ar-AA1EORsm?ocid=TobArticle) on hackers demanding $20 million for the return of stolen user data. Instead, the exchange is offering the same sum for information leading to arrest and conviction of the hackers.
+- **Coinbase replaced Discover in the S&P 500,** marking [the first time](https://www.latimes.com/business/story/2025-05-19/coinbase-becomes-first-crypto-company-to-join-the-s-p-500-after-rocky-week) a crypto platform has been included in the U.S. stock market's benchmark index... Separately, Coinbase [turned the tables](https://www.msn.com/en-us/money/technology/coinbase-puts-20-million-bounty-on-crooks-who-tried-to-extort-firm-over-stolen-customer-data/ar-AA1EORsm?ocid=TobArticle) on hackers demanding $20 million for the return of stolen user data. Instead, the exchange is offering the same sum for information leading to arrest and conviction of the hackers.
 
 - **Solana Mobile plans to launch** a new token alongside its new crypto-oriented smartphone, due out Aug. 4. ([Decrypt](https://decrypt.co/321360/why-solana-mobile-drop-token-seeker-phone))
 
