Adding some news links

--- a/2025/2025-06-01-wir.md
+++ b/2025/2025-06-01-wir.md
@@ -16,6 +16,18 @@
 
 **Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
 
+<!--
+
+Some early possibilities:
+
+- AIGADGETS: Followup to last week's post about OpenAI/Ive digital companion in the works. Consumer appetite for AI is kinda spotty, the blockbuster ChatGPT launch notwithstanding. This wasn't the case with the iPod or iPhone. Wrap in data, previous attempts at "third devices," smart speakers, watches, metaverse, etc.
+
+- STABLECOINS: Yeah, they sound boring. But they're becoming really important. Could be a good quick hit.
+
+- TK:
+
+-->
+
  Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
 
  Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
@@ -33,15 +45,21 @@
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Circle files for IPO <!-- Link TK -->
+- Circle files for IPO https://decrypt.co/322254/stablecoin-giant-circle-files-ipo-nyse-6-7-billion
 
 - Bitcoin Las Vegas recap. <!-- Link TK -->
 
-- Trump Media buying BTC. <!-- Link TK -->
+- Trump Media buying BTC. <!-- Link TK --> | Pakistan hired a World Liberty Financial advisor to a key government role: https://decrypt.co/322221/pakistan-world-liberty-financial-advisor-government-role-crypto
 
-- TK
+- Bank of Korea concerned about stablecoins' macro side effects: https://decrypt.co/322233/bank-of-korea-stablecoins-private-sector
 
-- TK
+- Jupiter's native memecoin has been surging: https://decrypt.co/322228/jupiter-price-surges-amid-expansion-bitcoin-tailwinds
+
+- China staged a humanoid boxing match between AI bots. https://decrypt.co/322195/first-humanoid-boxing-match-china
+
+- New open source project allows users to send BTC without internet access: https://decrypt.co/322192/project-send-bitcoin-without-internet-access
+
+- French police arrested 12 suspects in connection with crypto kidnappings: https://decrypt.co/322255/french-police-arrest-12-suspects-in-crypto-kidnapping-investigations
 
 ### Market Snapshot
 
