Adding lead photo from Wikimedia Commons

--- a/2025/2025-06-01-wir.md
+++ b/2025/2025-06-01-wir.md
@@ -1,8 +1,8 @@
 # tktk
 ## tktk
 
-![Black-and-white photo illustration of a woman reading a newspaper](https://w3w.news/img/newsreader-illo-melpo-tsiliaki-DALLE3-1920.jpg)
-*Photo illustration by Melpo Tsiliaki × DALL·E 3*
+![Circle co-founder and CEO Jeremy Allaire speaking at a fintech conference](https://w3w.news/img/allaire-wikimedia-1920.jpg)
+*Circle co-founder and CEO Jeremy Allaire speaking at MoneyConf 2018 in Dublin. Cropped photo by Eóin Noonan via Wikimedia Commons under Creative Commons 2.0 [license](https://creativecommons.org/licenses/by/2.0/).*
 
 <hr>
 
@@ -14,7 +14,7 @@
 
 <hr>
 
-**Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
+**Stablecoins are hot,** believe it or not.
 
 <!--
 
@@ -24,7 +24,11 @@ Some early possibilities:
 
 - STABLECOINS: Yeah, they sound boring. But they're becoming really important. Could be a good quick hit.
 
-- TK:
+- BADLOOK: Trump's self-dealing in memecoins and DeFi, as well as his potential wrecking of the broader U.S. economy, could taint the crypto industry as a whole for a long time.
+
+- TRISTATE: Wrench attack, Adams bitcoin bond, NJ tokenizing 240B in real Estate.
+
+- IMF: Their predictions of doom in El Salvador never came to pass.
 
 -->
 
@@ -45,21 +49,39 @@ Some early possibilities:
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Circle files for IPO https://decrypt.co/322254/stablecoin-giant-circle-files-ipo-nyse-6-7-billion
+- **IPO mania is spreading in crypto world.** Circle, the issuer of the popular USDC stablecoin, has launched its initial public offering (IPO) with a target valuation of around $6 billion.** The company plans to raise approximately $624 million by selling shares at a price range of $24 to $26 apiece, which could have significant investment implications for Coinbase, a major partner in the stablecoin's distribution. ([CNBC](https://www.cnbc.com/2025/05/27/stablecoin-issuer-circle-kicks-off-its-ipo-targeting-a-nearly-6-billion-valuation.html)) | Online trading platform eToro has added 12 new cryptocurrencies to its U.S. platform, including Cardano, Dogecoin, and XRP, bringing the total number of listed assets to 15. This move comes after a settlement with the SEC and the launch of an IPO roadshow, and is seen as a renewed push by the Israel-based platform to expand its U.S. presence. ([Decrypt](https://decrypt.co/322372/etoro-adds-12-tokens-to-us-platform)) <!-- Draft summaries by Leo/Llama 3.1 8B--> | BlackRock is looking to be a big buyer of the Circle IPO: https://www.theblock.co/post/356062/blackrock-plans-to-purchase-approximately-10-of-circles-ipo-shares-bloomberg
 
-- Bitcoin Las Vegas recap. <!-- Link TK -->
+- **Washington Watch:** At Bitcoin Las Vegas, Vance calls for passage of GENIUS Act in keynote speech: https://www.theblock.co/post/356074/jd-vance-calls-for-market-structure-bill-at-bitcoin-2025-says-trump-administration-will-fire-anti-crypto-regulators | Links to other highlights TK. Check back at https://news.google.com/search?q=Bitcoin%20Las%20Vegas%20conference&hl=en-US&gl=US&ceid=US%3Aen | US Labor Depratment withdrew Biden-era guidance warning retirement plans against the risks of buying crypto: https://www.cnbc.com/2025/05/28/crypto-in-401k-plans-trump-administration-eases-rules.html | Trump Media buying BTC. <!-- Link TK  | Pakistan hired a World Liberty Financial advisor to a key government role: https://decrypt.co/322221/pakistan-world-liberty-financial-advisor-government-role-crypto | https://www.politico.com/news/2025/05/28/crypto-trump-industry-memecoin-00372101 | https://www.axios.com/2025/05/28/vance-trump-crypto-bitcoin-stablecoin | https://bitcoinmagazine.com/news/us-senator-cynthia-lummis-discusses-bitcoin-reserve-stablecoin-legislation-and-market-structure-bill-at-bitcoin-2025-conference
 
-- Trump Media buying BTC. <!-- Link TK --> | Pakistan hired a World Liberty Financial advisor to a key government role: https://decrypt.co/322221/pakistan-world-liberty-financial-advisor-government-role-crypto
+- Telegram/xAI deal: https://decrypt.co/322462/toncoin-soars-amid-telegram-musk-xai-deal-1-5-billion-bond-sale-report
 
-- Bank of Korea concerned about stablecoins' macro side effects: https://decrypt.co/322233/bank-of-korea-stablecoins-private-sector
+- Bergen County, NJ tokenizing 240B in real estate on Avalanche
 
-- Jupiter's native memecoin has been surging: https://decrypt.co/322228/jupiter-price-surges-amid-expansion-bitcoin-tailwinds
+- El Salvador defying IMF https://decrypt.co/322374/el-salvador-defies-imf-again-fresh-bitcoin-purchase
+
+- Wrench attacks against wealthy crypto investors are on the rise. https://abcnews.go.com/US/wireStory/wrench-attacks-wealthy-crypto-holders-rise-122270144
 
 - China staged a humanoid boxing match between AI bots. https://decrypt.co/322195/first-humanoid-boxing-match-china
 
-- New open source project allows users to send BTC without internet access: https://decrypt.co/322192/project-send-bitcoin-without-internet-access
+
+<!--
+
+Other candidates...
+
+
+- GameStop buying BTC
 
 - French police arrested 12 suspects in connection with crypto kidnappings: https://decrypt.co/322255/french-police-arrest-12-suspects-in-crypto-kidnapping-investigations
+
+- Could electric cars die again? https://www.nytimes.com/2025/05/26/business/electric-vehicles-history.html <!-- Need cleaned up version...
+
+- New data center city forming outside Reno. https://www.technologyreview.com/2025/05/22/1117300/the-download-the-desert-data-center-boom-and-how-to-measure-earths-elevations/
+
+- The 10-year anniversary of Trump's entry into presidential politics is approaching on June 16. https://money.cnn.com/2016/06/16/media/trump-announcement-one-year-later/index.html
+
+- ICYMI: U.S. students' classroom performance has dropped markedly since the COVID19 pandemic according to multiple metrics, with one notable exception: high-school graduation rates. https://www.washingtonpost.com/opinions/2025/05/15/schools-pandemic-graduation-rates/
+
+-->
 
 ### Market Snapshot
 
@@ -77,19 +99,15 @@ Some early possibilities:
 
 ### Looking Ahead
 
-- Stablecoin bill moves forward. <!-- Link TK -->
+- Ethereum co-founder Vitalik Buterin has suggested that Ethereum could be a viable alternative to traditional cash in the event of a cashless society failure, citing Sweden and Norway's recent decision to maintain cash reserves due to vulnerabilities in their centralized payment systems. However, experts disagree on the feasibility of Ethereum's resilience in such scenarios, with some highlighting the need for offline functionality and others pointing to the potential of stablecoins as a solution. ([Decrypt](https://decrypt.co/322398/vitalik-buterin-ethereum-sweden-norway-cashless)) <!-- Draft summary by Leo/Llama 3.1 8B-->
 
-- Mackenzie on the coming crypto-driven financial crisis. <!-- link TK -->
+- New open source project allows users to send BTC without internet access: https://decrypt.co/322192/project-send-bitcoin-without-internet-access
 
-- New data center city forming outside Reno. https://www.technologyreview.com/2025/05/22/1117300/the-download-the-desert-data-center-boom-and-how-to-measure-earths-elevations/
-
-- The 10-year anniversary of Trump's entry into presidential politics is approaching on June 16. https://money.cnn.com/2016/06/16/media/trump-announcement-one-year-later/index.html
-
-- Could electric cars die again? https://www.nytimes.com/2025/05/26/business/electric-vehicles-history.html <!-- Need cleaned up version... -->
+- Bank of Korea concerned about stablecoins' macro side effects: https://decrypt.co/322233/bank-of-korea-stablecoins-private-sector
 
 ### Odds & Ends
 
-- ICYMI: U.S. students' classroom performance has dropped markedly since the COVID19 pandemic according to multiple metrics, with one notable exception: high-school graduation rates. https://www.washingtonpost.com/opinions/2025/05/15/schools-pandemic-graduation-rates/
+- Jupiter's native memecoin has been surging: https://decrypt.co/322228/jupiter-price-surges-amid-expansion-bitcoin-tailwinds
 
 - https://slate.com/culture/2025/05/birds-movies-charlies-angels-2000-pygmy-nuthatch.html
 
